# eth-steth

./: .gitignore  AGENTS.md  CLAUDE.md  MATH_ISSUES.md  README.md  pyproject.toml  requirements.txt  spec.md
src/dashboard/: app.py
src/dashboard/components/: charts.py  metrics_cards.py  sidebar.py
src/dashboard/pages/: liquidation.py  overview.py  rates.py  simulations.py  stress_tests.py
src/dashboard/tabs/: liquidation.py  overview.py  simulations.py  stress_tests.py
src/data/: __init__.py  aave_positions.py  constants.py  contracts.py  dex_liquidity.py  interfaces.py  onchain_provider.py  provider_factory.py  static_params.py
src/position/: pnl.py  unwind.py  vault_position.py
src/protocol/: emode.py  interest_rate.py  liquidation.py  pool.py
src/simulation/: liquidation_cascade.py  monte_carlo.py  params.py  results.py
src/stress/: scenarios.py  shock_engine.py  var.py
tests/data/: test_onchain_integration.py  test_onchain_provider.py
tests/position/: test_pnl.py  test_unwind.py  test_vault_position.py
tests/protocol/: test_interest_rate.py  test_liquidation.py  test_pool.py
tests/simulation/: test_liquidation_cascade.py  test_monte_carlo.py
tests/stress/: test_scenarios.py  test_shock_engine.py  test_var.py
